--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@mui/icons-material": "^5.15.16",
     "@mui/material": "^5.15.16",
     "@react-firebase/auth": "^0.2.10",
+    "@reduxjs/toolkit": "^2.2.5",
     "firebase": "^10.11.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
