--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@react-firebase/auth": "^0.2.10",
     "@reduxjs/toolkit": "^2.2.5",
     "firebase": "^10.11.1",
+    "history": "^5.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.23.1",
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
